updated weather api filtering logic