@@ -1,15 +1,18 @@
 package com.securin.weatherdata.service.serviceimpl;
-import com.securin.weatherdata.service.WeatherService;
+import com.securin.weatherdata.exception.CSVProcessingException;
 import com.opencsv.CSVReader;
+import com.securin.weatherdata.dto.MonthlyTemperatureStats;
+import com.securin.weatherdata.dto.WeatherResponseDTO;
 import com.securin.weatherdata.entity.Weather;
+import com.securin.weatherdata.exception.CSVProcessingException;
 import com.securin.weatherdata.repository.WeatherRepository;
+import com.securin.weatherdata.service.WeatherService;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 
 import java.io.InputStreamReader;
 import java.time.LocalDateTime;
 import java.util.*;
-import java.util.stream.Collectors;
 
 @Service
 public class WeatherServiceImpl implements WeatherService {
@@ -20,6 +23,7 @@ public class WeatherServiceImpl implements WeatherService {
         this.repository = repository;
     }
 
+
     @Override
     public void uploadCSV(MultipartFile file) {
 
@@ -29,64 +33,92 @@ public class WeatherServiceImpl implements WeatherService {
             List<String[]> rows = reader.readAll();
             List<Weather> weatherList = new ArrayList<>();
 
-           for (int i = 1; i < rows.size(); i++) {
+            for (int i = 1; i < rows.size(); i++) {
 
-    String[] row = rows.get(i);
+                String[] row = rows.get(i);
+                if (row.length < 12) continue;
 
-    if (row.length < 12) continue;  
+                Weather weather = new Weather();
+                weather.setDateTime(convertToDateTime(row[0]));
+                weather.setCondition(row[1]);
+                weather.setTemperature(parseDoubleSafe(row, 11));
+                weather.setHumidity(parseDoubleSafe(row, 6));
+                weather.setPressure(parseDoubleSafe(row, 8));
 
-    Weather weather = new Weather(
-            convertToDateTime(row[0]),
-            row[1],
-            parseDoubleSafe(row, 11),  
-            parseDoubleSafe(row, 6),   
-            parseDoubleSafe(row, 8)    
-    );
-
-    weatherList.add(weather);
-}
+                weatherList.add(weather);
+            }
 
             repository.saveAll(weatherList);
 
         } catch (Exception e) {
-            throw new RuntimeException("Error processing CSV file", e);
+           throw new CSVProcessingException("Error processing CSV file", e);
         }
     }
- 
+
     @Override
-    public List<Weather> getWeatherByMonth(int year, int month) {
+    public List<WeatherResponseDTO> getWeatherByMonth(int year, int month) {
+
         LocalDateTime start = LocalDateTime.of(year, month, 1, 0, 0);
         LocalDateTime end = start.withDayOfMonth(
                 start.toLocalDate().lengthOfMonth())
                 .withHour(23).withMinute(59);
 
-        return repository.findByDateTimeBetween(start, end);
+        return repository.findByDateTimeBetween(start, end)
+                .stream()
+                .map(w -> new WeatherResponseDTO(
+                        w.getDateTime().toString(),
+                        w.getCondition(),
+                        w.getTemperature(),
+                        w.getHumidity(),
+                        w.getPressure()
+                ))
+                .toList();
     }
 
+
     @Override
-    public Map<String, Double> getYearlyTemperatureStats(int year) {
+    public List<MonthlyTemperatureStats> getMonthlyTemperatureStats(int year) {
 
-        List<Double> temps = repository.findAll().stream()
+        List<Weather> yearlyData = repository.findAll().stream()
                 .filter(w -> w.getDateTime().getYear() == year)
-                .map(Weather::getTemperature)
-                .filter(Objects::nonNull)
-                .sorted()
-                .collect(Collectors.toList());
+                .filter(w -> w.getTemperature() != null)
+                .toList();
 
-        double max = temps.stream().mapToDouble(Double::doubleValue).max().orElse(0);
-        double min = temps.stream().mapToDouble(Double::doubleValue).min().orElse(0);
-        double median = calculateMedian(temps);
+        Map<Integer, List<Double>> groupedByMonth = new HashMap<>();
 
-        Map<String, Double> result = new HashMap<>();
-        result.put("max", max);
-        result.put("min", min);
-        result.put("median", median);
+        for (Weather weather : yearlyData) {
+            int month = weather.getDateTime().getMonthValue();
+
+            groupedByMonth
+                    .computeIfAbsent(month, k -> new ArrayList<>())
+                    .add(weather.getTemperature());
+        }
+
+        List<MonthlyTemperatureStats> result = new ArrayList<>();
+
+        for (Map.Entry<Integer, List<Double>> entry : groupedByMonth.entrySet()) {
+
+            List<Double> temps = entry.getValue().stream()
+                    .sorted()
+                    .toList();
+
+            double max = temps.stream().mapToDouble(Double::doubleValue).max().orElse(0);
+            double min = temps.stream().mapToDouble(Double::doubleValue).min().orElse(0);
+            double median = calculateMedian(temps);
+
+            result.add(new MonthlyTemperatureStats(
+                    entry.getKey(),
+                    max,
+                    min,
+                    median
+            ));
+        }
 
         return result;
     }
 
-    private double calculateMedian(List<Double> list) {
 
+    private double calculateMedian(List<Double> list) {
         int size = list.size();
         if (size == 0) return 0;
 
@@ -108,22 +140,23 @@ public class WeatherServiceImpl implements WeatherService {
 
         return LocalDateTime.parse(formatted);
     }
+
     private Double parseDoubleSafe(String[] row, int index) {
 
-    if (index >= row.length) return null;
+        if (index >= row.length) return null;
 
-    String value = row[index];
+        String value = row[index];
 
-    if (value == null || value.isEmpty() ||
-        value.equals("-9999") ||
-        value.equalsIgnoreCase("N/A")) {
-        return null;
+        if (value == null || value.isEmpty() ||
+                value.equals("-9999") ||
+                value.equalsIgnoreCase("N/A")) {
+            return null;
+        }
+
+        try {
+            return Double.parseDouble(value);
+        } catch (NumberFormatException e) {
+            return null;
+        }
     }
-
-    try {
-        return Double.parseDouble(value);
-    } catch (NumberFormatException e) {
-        return null;  
-    }
-}
 }
